# yaml-rs

./: .gitignore  .rustfmt.nightly.toml  .typos.toml  Cargo.toml  README.md  _typos.toml  clippy.toml  message.txt  pyproject.toml  ruff.toml  rumdl.toml  rust-toolchain.toml
.cargo/: config.toml
.github/: bench_pgo_build.py
.github/actions/build-pgo-wheel/: action.yaml  action.yml  pgo.py  pgo.sh
.github/actions/git-tag-version/: action.yml
.github/actions/tool/: action.yml
.github/scripts/: normalize_cargo_toml.py  test_alpine.sh  test_wasm_wheel.mjs
.github/scripts/alpine/: Dockerfile  entrypoint.sh
.github/workflows/: android.yaml  build-sdist.yml  ci.yaml  ci.yml  ios.yaml  linux.yaml  linux.yml  macos.yaml  macos.yml  manylinux.yaml  musllinux.yaml  musllinux.yml  relator.yaml  tests-alpine.yaml  tests-alpine.yml  tests.yaml  tests.yml  tool.yml  wasm.yaml  wasm.yml  windows.yaml  windows.yml
.github/workflows/build_wheels/: linux.yaml  macos.yaml  musllinux.yaml
benchmark/: README.md  pgo.py  run.py
benchmark/data/: bench.yaml  example.yaml
benchmark/rust/scalar_compare/benches/: parse_i64.rs
examples/: load.py
py-src/yaml_rs/: __init__.py  _lib.py  _yaml_rs.pyi
python/yaml_rs/: __init__.py  __init__.pyi  _yaml_rs.pyi
scripts/: bump_python_deps.py
src/: decoder.rs  dump.rs  dumps.rs  from_rust.rs  lib.rs  load.rs  loads.rs  rust_dec2flt.rs
src/dump/: dumps.rs  helpers.rs  normalize.rs
src/from_rust/: ascii.rs  dec2flt.rs  memchr.rs  num.rs
src/load/: arena.rs  decoder.rs  format_error.rs  loads.rs  options.rs  parse_datetime.rs  rust_dec2flt.rs  scalar.rs  types.rs  value.rs
tests/: __init__.py  helpers.py  test_dumps.py  test_dumps_test_suite.py  test_loads.py  test_loads_test_suite.py  test_wasm.py  yaml_test_suite.py
