[package]
name = "yaml-rs"
version = "0.1.3"
edition = "2024"
license = "Unlicense"
repository = "https://github.com/lava-sh/yaml-rs"

[lib]
name = "_yaml_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = {
    # version = "=0.28.3",
    git = "https://github.com/PyO3/pyo3",
    rev = "cd128ed50e6fffc4e49a08c149599a3b8bd21d5b",
    features = [
        "num-bigint",
        "generate-import-lib",
        "jiff-02",
        "nightly",
    ]
}
jiff = "=0.2.28"
itoa = "=1.0.18"
num-bigint = "=0.4.6"
rustc-hash = {
    version = "=2.1.2",
    features = ["nightly"],
}
memchr = "=2.8.1"
encoding_rs = {
    # https://github.com/hsivonen/encoding_rs/issues/118#issuecomment-4678860542
    # version = "=0.8.35",
    # features = ["simd-accel"],
    git = "https://github.com/hsivonen/encoding_rs",
    rev = "229d34374bde30c8b9603a03654d7c308ade5df1",
    features = ["simd-accel"],
}
simdutf8 = {
    version = "=0.1.5",
    features = ["aarch64_neon_prefetch"],
}
saphyr = {
    git = "https://github.com/lava-sh/saphyr",
    rev = "e12f38b41152417c619044151c7b71ccee945ffa",
}
# after https://github.com/bourumir-wyngs/granit-parser/commit/e10ee63e049c2fff7390d5640c690e95c8d216a1
# comment parsing was added, which degrades performance because it requires more operations
granit-parser = {
    git = "https://github.com/bourumir-wyngs/granit-parser",
    rev = "e10ee63e049c2fff7390d5640c690e95c8d216a1",
}
lexical-core = {
    git = "https://github.com/Alexhuszagh/rust-lexical",
    rev = "afb2efa651f42f63415a3bf3d51ced6143132b2b",
    default-features = false,
    features = [
        "radix",
        "parse-floats",
        "parse-integers",
    ]
}
mimalloc = {
    optional = true,
    version = "=0.1.52",
    features = [
        # mimalloc v3
        # See: https://github.com/microsoft/mimalloc/tree/dev3?tab=readme-ov-file#branches
        "override",
        "local_dynamic_tls",
    ]
}

[features]
default = []
mimalloc = ["dep:mimalloc"]

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"
strip = "symbols"
codegen-units = 1

[lints.rust]
warnings = "deny"

[lints.clippy]
perf = { level = "deny", priority = 1 }
style = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }

too_many_lines = "allow"
manual_let_else = "allow"
cast_possible_truncation = "allow"
option_if_let_else = "allow"
missing_const_for_fn = "allow"
wrong_self_convention = "allow"
