[package]
name = "yaml-rs"
version = "0.1.6"
edition = "2024"
license = "Unlicense"
repository = "https://github.com/lava-sh/yaml-rs"

[lib]
name = "_yaml_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = {
    git = "https://github.com/PyO3/pyo3",
    rev = "cfd9cec8aa98ff7bd2362ab5b348e9fd7db5e61a",
    # version = "=0.29.1",
    features = [
        "jiff-02",
        "num-bigint",
        "nightly",
    ]
}
jiff = "=0.2.33"
itoa = "=1.0.18"
num-bigint = "=0.4.8"
rustc-hash = "=2.1.3"
memchr = "=2.8.3"
encoding_rs = "=0.8.35"
simdutf8 = {
    version = "=0.1.5",
    features = ["aarch64_neon_prefetch"],
}
saphyr = {
    git = "https://github.com/lava-sh/saphyr",
    rev = "e12f38b41152417c619044151c7b71ccee945ffa",
}
# after https://github.com/bourumir-wyngs/granit-parser/commit/e10ee63e049c2fff7390d5640c690e95c8d216a1
# comment parsing was added, which degrades performance because it requires more operations
granit-parser = {
    git = "https://github.com/bourumir-wyngs/granit-parser",
    rev = "e10ee63e049c2fff7390d5640c690e95c8d216a1",
}
lexical-core = {
    git = "https://github.com/Alexhuszagh/rust-lexical",
    rev = "afb2efa651f42f63415a3bf3d51ced6143132b2b",
    default-features = false,
    features = [
        "radix",
        "parse-floats",
        "parse-integers",
    ]
}

# mimalloc v3
[target.'cfg(not(any(target_os = "macos", target_os = "windows")))'.dependencies.mimalloc]
optional = true
version = "=0.1.52"
features = [
    "override",
    "local_dynamic_tls",
]

[target.'cfg(target_os = "macos")'.dependencies.mimalloc]
optional = true
version = "=0.1.52"
# Do not enable mimalloc's "override" feature on macOS.
#
# It installs process-wide malloc interposition and replaces macOS malloc zone/fork
# hooks when the extension is imported via dlopen. That breaks fork-based subprocess
# spawning, e.g., asyncio/playwright can fail.
features = [
    "local_dynamic_tls",
]

[target.'cfg(target_os = "windows")'.dependencies.mimalloc]
optional = true
version = "=0.1.52"
features = [
    "win_direct_tls",
]

[features]
default = []
mimalloc = ["dep:mimalloc"]

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"
strip = "symbols"
codegen-units = 1

[lints.rust]
warnings = "deny"

[lints.clippy]
perf       = { level = "deny", priority = 1 }
style      = { level = "deny", priority = -1 }
pedantic   = { level = "deny", priority = -1 }
nursery    = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }

too_many_lines = "allow"
manual_let_else = "allow"
cast_possible_truncation = "allow"
option_if_let_else = "allow"
missing_const_for_fn = "allow"
wrong_self_convention = "allow"
