[build-system]
requires = ["maturin == 1.13.3"]
build-backend = "maturin"

[tool.maturin]
python-source = "py-src"
module-name = "yaml_rs._yaml_rs"

[project]
name = "yaml-rs"
dynamic = ["version"]
requires-python = ">=3.10"
description = "A High-Performance YAML Parser for Python written in Rust"
readme = "README.md"
license = "Unlicense"
license-files = ["UNLICENSE"]
authors = [
    { name = "chirizxc", email = "chirizxc@proton.me" }
]
urls.Source = "https://github.com/lava-sh/yaml-rs"
urls.Homepage = "https://github.com/lava-sh/yaml-rs"
urls."Bug Tracker" = "https://github.com/lava-sh/yaml-rs/issues"
classifiers = [
    "Typing :: Typed",
    "Programming Language :: Rust",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
]

[dependency-groups]
typos = ["typos == 1.47.2"]
zizmor = ["zizmor == 1.25.2"]
rumdl = ["rumdl == 0.2.8"]
maturin = ["maturin == 1.13.3"]
wasm-test = [
    "pytest-pyodide == 0.59.2",
    "pytest-httpserver == 1.1.5",
]
ci = [
    "pytest == 9.0.3",
    "dirty-equals == 0.11",
    "ruff == 0.15.16",
    "pyyaml == 6.0.3",
    { include-group = "maturin" },
]
dev = [
    { include-group = "ci" },
    { include-group = "typos" },
    { include-group = "rumdl" },
    { include-group = "zizmor" },
]
bench = [
    "oyaml == 1.0",
    "pyyaml == 6.0.3",
    "ryaml == 0.5.1",
    "ruamel-yaml == 0.19.1",
    "ruamel.yaml.clibz == 0.3.7",
    ##################
    "polars == 1.41.2",
    "altair == 6.2.1 ",
    "py-cpuinfo == 9.0.0",
    "vl-convert-python == 1.9.0.post1",
]

[tool.uv.dependency-groups]
wasm-test = { requires-python = ">=3.11" }
