[build-system]
requires = ["maturin == 1.14.1"]
build-backend = "maturin"

[tool.maturin]
python-source = "py-src"
module-name = "yaml_rs._yaml_rs"

[project]
name = "yaml-rs"
dynamic = ["version"]
requires-python = ">= 3.10"
description = "A High-Performance YAML Parser for Python written in Rust"
readme = { file = "README.md", content-type = "text/markdown" }
license = "Unlicense"
license-files = ["UNLICENSE"]
authors = [
    { name = "chirizxc", email = "chirizxc@proton.me" }
]
keywords = [
    "yaml",
    "parser",
]
classifiers = [
    "Typing :: Typed",
    "Programming Language :: Rust",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries",
    "Development Status :: 5 - Production/Stable",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/lava-sh/yaml-rs"
Repository = "https://github.com/lava-sh/yaml-rs"
Issues = "https://github.com/lava-sh/yaml-rs/issues"

[dependency-groups]
typos = ["typos == 1.47.2"]
zizmor = ["zizmor == 1.26.1"]
rumdl = ["rumdl == 0.2.20"]
maturin = [
    "maturin == 1.14.1 ; sys_platform != 'linux'",
    "maturin[patchelf] == 1.14.1 ; sys_platform == 'linux'",
]
wasm-test = [
    "pytest-pyodide == 0.59.2",
    "pytest-httpserver == 1.1.5",
]
ci = [
    "pytest == 9.1.1",
    "dirty-equals == 0.11",
    "ruff == 0.15.18",
    "pyyaml == 6.0.3",
    { include-group = "maturin" },
]
dev = [
    { include-group = "ci" },
    { include-group = "typos" },
    { include-group = "rumdl" },
    { include-group = "zizmor" },
]
bench = [
    "oyaml == 1.0",
    "pyyaml == 6.0.3",
    "ryaml == 0.5.1",
    "ruamel-yaml == 0.19.1",
    "ruamel.yaml.clibz == 0.3.7",
    ##################
    "polars == 1.41.2",
    "altair == 6.2.1 ",
    "py-cpuinfo == 9.0.0",
    "vl-convert-python == 1.9.0.post1",
]

[tool.uv.dependency-groups]
wasm-test = { requires-python = ">= 3.13" }
